--- a/qlue/package.json
+++ b/qlue/package.json
@@ -17,6 +17,7 @@
     "unit.js": "^2.0.0"
   },
   "dependencies": {
-    "dotenv": "^6.1.0"
+    "dotenv": "^6.1.0",
+    "moment": "^2.24.0"
   }
 }
